--- a/mkdocs.yml
+++ b/mkdocs.yml
@@ -2,11 +2,12 @@ site_name: Carduus
 nav:
   - Home: README.md
   - Getting Started: guides/getting-started.md
-  - API: api.md
   - Guides:
     - Carduus on Databricks: guides/databricks.ipynb
     - Defining Token Specs: guides/custom-tokens.md
     - Using Custom PII: guides/custom-pii.md
+  - API: api.md
+  - Command Line Interface: cli.md
   - OPPRL:
     - About: opprl.md
     - Specification: opprl/PROTOCOL.md
@@ -42,9 +43,6 @@ extra_css:
   - stylesheets/extra.css
 
 extra:
-  social:
-    - icon: fontawesome/brands/mastodon 
-      link: https://fosstodon.org/@squidfunk
   analytics:
     provider: google
     property: G-KTQKK1C4F3
@@ -57,6 +55,7 @@ plugins:
       execute: false
 
 markdown_extensions:
+  - mkdocs-click
   - attr_list
   - pymdownx.emoji:
       emoji_index: !!python/name:material.extensions.emoji.twemoji
