--- a/pyproject.toml
+++ b/pyproject.toml
@@ -1,16 +1,22 @@
-[tool.poetry]
+[project]
 name = "carduus"
 version = "0.3.0"
 description = "PySpark implementation of the Open Privacy Preserving Record Linkage protocol."
-authors = ["Eddie Pantridge <eddie@spindlehealth.com>"]
+authors = [{ name = "Eddie Pantridge", email = "eddie@spindlehealth.com" }]
 readme = "README.md"
-packages = [{ include = "carduus" }]
+requires-python = ">=3.10"
+dependencies = [
+    "pyspark (>=3.5.0,<4.0.0)",
+    "jellyfish (>=1.0.3,<2.0.0)",
+    "cryptography (>=44.0.1,<45.0.0)",
+    "click (>=8.1.8,<9.0.0)",
+]
 
-[tool.poetry.dependencies]
-python = "^3.10"
-pyspark = "^3.5"
-jellyfish = "^1.0.3"
-cryptography = "^44.0.1"
+[project.scripts]
+spindle-token = "carduus.cli:cli"
+
+[tool.poetry]
+packages = [{ include = "carduus" }]
 
 [tool.poetry.group.dev.dependencies]
 pytest = "^7.2"
@@ -25,9 +31,10 @@ mkdocs-material = ">=9.6"
 mkdocstrings = ">=0.28"
 mkdocstrings-python = ">=1.14.6"
 mkdocs-jupyter = ">=0.25.1"
+mkdocs-click = "^0.9.0"
 
 [build-system]
-requires = ["poetry-core"]
+requires = ["poetry-core>=2.0.0,<3.0.0"]
 build-backend = "poetry.core.masonry.api"
 
 [tool.black]
