--- a/pyproject.toml
+++ b/pyproject.toml
@@ -23,15 +23,15 @@ pytest = "^7.2"
 pyspark = { version = "^3.5", extras = ["connect"] }
 # pyspark.testing.utils breaks on numpy 2. 
 numpy = "<2.0"
-coverage = "^7.4"
-black = "^24.4"
-mypy = "^0.991"
+black = "*"
+mypy = "*"
 mkdocs = ">=1.6"
-mkdocs-material = ">=9.6"
-mkdocstrings = ">=0.28"
+mkdocs-material = ">=9.6.14"
+mkdocstrings = ">=0.29"
 mkdocstrings-python = ">=1.14.6"
 mkdocs-jupyter = ">=0.25.1"
 mkdocs-click = "^0.9.0"
+pytest-cov = "^6.1.1"
 
 [build-system]
 requires = ["poetry-core>=2.0.0,<3.0.0"]
