--- a/mkdocs.yml
+++ b/mkdocs.yml
@@ -5,6 +5,7 @@ nav:
   - Guides:
     - Spindle Token on Databricks: guides/databricks.ipynb
     - Custom Tokens: guides/custom-tokens.md
+    - Migrating from Carduus: guides/migrating-from-carduus.md
   - API: api.md
   - Command Line Interface: cli.md
   - carduus (legacy):
@@ -12,9 +13,8 @@ nav:
     - Guides:
       - Carduus on Databricks: carduus/guides/databricks.ipynb
       - Defining Token Specs: carduus/guides/custom-tokens.md
-      - Using Custom PII: carduus/guides/custom-pii.md
-    - API v0: carduus/api.md
-    - Command Line Interface: carduus/cli.md
+    - Carduus API: carduus/api.md
+    - Carduus CLI: carduus/cli.md
   - OPPRL:
     - About: opprl.md
     - Specification: opprl/PROTOCOL.md
