--- a/pyproject.toml
+++ b/pyproject.toml
@@ -10,6 +10,7 @@ dependencies = [
     "jellyfish (>=1.0.3,<2.0.0)",
     "cryptography (>=44.0.1,<45.0.0)",
     "click (>=8.1.8,<9.0.0)",
+    "phonenumberslite (>=9.0.12,<10.0.0)",
 ]
 
 [project.scripts]
